istio/virtual_service_33v1_33v2_34v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - uri:
        prefix: "/carts"
    route:
    - destination:
        host: carts.production.svc.cluster.local
  - route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v1
      weight: 33 #v1
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v2
      weight: 33 #v2
    - destination:
        host: front-end.production.svc.cluster.local
        subset v2
      weight: 34 #v3

#Added third front-end production
