istio/virtual_service_v2_for_users.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - headers:
        cookie:
          regex: ".*logged_in.*"
    route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v2
    route:
    - destination:
        host: front-end.production.svc.cluster.local
	subset: v3
  - route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v1
